k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
                  number: 8080
          - path: /exchange/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: exchange-gateway
                port:
                  number: 8080
